Fix some divs in large version
* Create class to horizontal scroll
* Add some row

--- a/app/assets/stylesheets/wizard.scss
+++ b/app/assets/stylesheets/wizard.scss
@@ -97,4 +97,11 @@
       margin-bottom: 0.5rem;
     }
   }
+
+  .horizontal-scroll {
+    overflow: hidden;
+    overflow-x: auto;
+    clear: both;
+    width: 100%;
+  }
 }
